Minor change in margins

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
     background-color: #336699;
+    color: #ffffff;
     font-family: 'Ubuntu', sans-serif;
     padding-top: 8%;
-    padding-left: 20%;
+    padding-left: 15%;
 }
 
 .links{
