--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .panel {
     padding: 0 18px;
     max-height: 0;
-    overflow: hidden;
+    overflow: auto;
     transition: 0.8s ease-in-out;
     opacity: 0;
     width: 67%;
